unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Application_Picklist__c.field-meta.xml
<CustomField>
    <fullName>ETT_Application_Picklist__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Long Hole</fullName>
            </value>
            <value>
                <fullName>Short Hole</fullName>
            </value>
            <value>
                <fullName>Inter City</fullName>
            </value>
            <value>
                <fullName>Off Road</fullName>
            </value>
            <value>
                <fullName>Off and Good</fullName>
            </value>
            <value>
                <fullName>Ready Mix Concrete</fullName>
            </value>
            <value>
                <fullName>Passenger Transport</fullName>
            </value>
            <value>
                <fullName>Rock Transportation</fullName>
            </value>
            <value>
                <fullName>Cement Bulker</fullName>
            </value>
            <value>
                <fullName>Inter State Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>