unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Axil_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ETT_Axil_Configuration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Axle Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>