unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Expected_KMS__c.field-meta.xml
<CustomField>
    <fullName>ETT_Expected_KMS__c</fullName>
    <label>Expected KMS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>