unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Test Tyres</relationshipLabel>
    <relationshipName>Staging_Test_Tyres</relationshipName>
    <type>Lookup</type>
</CustomField>