unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Nylon__c.field-meta.xml
<CustomField>
    <fullName>ETT_Nylon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nylon</label>
    <type>Checkbox</type>
</CustomField>