unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Staging Test Tyres</relationshipLabel>
    <relationshipName>Staging_Test_Tyres</relationshipName>
    <type>Lookup</type>
</CustomField>