unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_RadialNylon__c.field-meta.xml
<CustomField>
    <fullName>ETT_RadialNylon__c</fullName>
    <label>Radial Nylon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radial</fullName>
            </value>
            <value>
                <fullName>Nylon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>