unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Remaining_Tread_Depth_4__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remaining_Tread_Depth_4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remaining Tread Depth 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>