unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Remaining_Tread_Depth_Position__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remaining_Tread_Depth_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remaining Tread Depth Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>