unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Retread_Process_Picklist__c.field-meta.xml
<CustomField>
    <fullName>ETT_Retread_Process_Picklist__c</fullName>
    <label>Retread Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Precured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>