unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Rubber_Hardness__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rubber_Hardness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rubber Hardness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>