unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_SL_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_SL_No__c</fullName>
    <displayFormat>SN{0000}</displayFormat>
    <label>SL No</label>
    <type>AutoNumber</type>
</CustomField>