unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>