unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Tyre_Position__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ETT Tyre Position</label>
    <length>250</length>
    <type>Text</type>
</CustomField>