unpackaged/main/default/objects/ETT_Staging_Test_Tyre__c/fields/ETT_Wear_In_MM__c.field-meta.xml
<CustomField>
    <fullName>ETT_Wear_In_MM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wear In MM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>